Tue Oct  9 14:50:51 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c
	(gtk_tree_view_model_sort_column_changed): fix broken code.

2001-10-08  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkselection.c: s/succesfully/successfully/g

2001-10-08  Havoc Pennington  <hp@pobox.com>

	* demos/gtk-demo/stock_browser.c: remove unused enum

	* gtk/gtktreeselection.c (gtk_tree_selection_real_select_node):
	pass the current selection state of the node in to the user
	selection func

2001-10-06  Matthias Clasen  <matthiasc@poet.de>

	* gdk/x11/gdkx.h (GDK_CURSOR_XCURSOR): Replace reference to 
	non-existent function gdk_x11_cursor_get_xid 
	by gdk_x11_cursor_get_xcursor.

Fri Oct  5 20:50:00 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreestore.c (gtk_tree_store_iter_has_child): improve
	warning.

	* gtk/gtktreemodel.c (gtk_tree_row_reference_new_proxy): ref and
	unref nodes, #okay61676

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_sort): we listen
	to the property; no need to clear the other columns.  Also, we go
	to 'unsorted' if the model supports it.

2001-10-05  Sven Neumann  <sven@gimp.org>

	* demos/testpixbuf-save.c
	* demos/testpixbuf-scale.c: simple tests for the new PNG tEXt chunk 
	feature.

Fri Oct  5 19:06:07 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreeview.c (gtk_tree_view_leave_notify): should
	destroy the search dialog

	* gtk/gtktreeview.c (gtk_tree_view_real_start_interactive_search):
	added check to prevent creation of a search dialog if there's
	already one around

	* gtk/gtktreeview.c: Define GTK_TREE_VIEW_SEARCH_DIALOG_KEY, and use
	it instead of "search-dialog" (when getting/setting the search dialog
	widget).

2001-10-05  Jakub Steiner <jimmac@ximian.com>

	* gtk/stock-icons/stock_broken_image.png: broken images icon

2001-10-04  Havoc Pennington  <hp@pobox.com>

        Fix #56586
	
	* gtk/gtksettings.c (gtk_settings_class_init): move the F10
	accelerator setting here...
